src/objects/ACED_Delivery_Actual_Line__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <formula>Delivery_Actuals__r.Delivery__r.Activity__r.Channel__r.Actual_Attribute__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Actual</inlineHelpText>
        <label>Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <inlineHelpText>This is a helptext for Attribute</inlineHelpText>
        <label>Attribute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Actuals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a helptext for Delivery Actuals</inlineHelpText>
        <label>Delivery Actuals</label>
        <referenceTo>ACED_Delivery_Actuals__c</referenceTo>
        <relationshipLabel>Delivery Actual Lines</relationshipLabel>
        <relationshipName>Delivery_Actual_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Attribute_Upsert__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for Delivery Attribute Upsert</inlineHelpText>
        <label>Delivery Attribute Upsert</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delivery Actual Line</label>
    <nameField>
        <displayFormat>AID-{0000}</displayFormat>
        <label>Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Actual Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>